--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">polycare</string>
+    <string name="titre">Titre</string>
+    <string name="nom">nom</string>
+    <string name="prenom">prenom</string>
+    <string name="phonenumber">téléphone</string>
+    <string name="importance">importance</string>
+    <string name="category">category</string>
+    <string name="date">date</string>
+    <string name="partagez_votre_localisation">partagez votre localisation</string>
 </resources>
