--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">polycare</string>
     <string name="titre">*titre</string>
     <string name="phonenumber">*téléphone</string>
-    <string name="importance">*urgence(5/5)</string>
+    <string name="importance">*urgence</string>
     <string name="category">*category</string>
     <string name="date">*date</string>
     <string name="partagez_votre_localisation">partagez votre localisation</string>
@@ -14,4 +14,14 @@
     <string name="title_graphe">Graphe</string>
     <string name="title_location">Map</string>
     <string name="check_declaration"></string>
+    <string name="filtre">Filtre:</string>
+    <string name="tri_par">Tri par:</string>
+    <string name="title">Title</string>
+    <string name="dateY">Date</string>
+    <string name="arthor">Arthor</string>
+    <string name="descriptions">Description</string>
+    <string name="Date">date</string>
+    <string name="categorie">category</string>
+    <string name="state">state</string>
+    <string name="description">description</string>
 </resources>
