use button in declaration, add dialogue when we click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="categorie">category</string>
     <string name="state">state</string>
     <string name="description">description</string>
+    <string name="button">Valider</string>
 </resources>
