--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="state">state</string>
     <string name="description">description</string>
     <string name="button">Valider</string>
+    <string name="graphe">Graphe</string>
 </resources>
