--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,23 @@
 <resources>
-    <string name="app_name">polycare</string>
+    <string name="app_name">polycare_f</string>
+    <string name="add">add</string>
+    <string name="graphe">graphe</string>
+    <string name="homepage">homepage</string>
+    <string name="tri_par">tri_par</string>
+    <string name="filtre">filtre</string>
+    <string name="title">title</string>
+    <string name="datey">dateY</string>
+    <string name="arthor">arthor</string>
+    <string name="descriptions">descriptions</string>
+    <string name="acueil">Acueil</string>
+    <string name="declar">Déclarer</string>
+    <string name="graph">Graphe</string>
+    <string name="map">Map</string>
+    <string name="nom">*nom</string>
+    <string name="pernom">*pernom</string>
     <string name="titre">*titre</string>
-    <string name="phonenumber">*téléphone</string>
-    <string name="importance">*urgence</string>
-    <string name="category">*category</string>
-    <string name="date">*date</string>
-    <string name="partagez_votre_localisation">partagez votre localisation</string>
-    <string name="lastname">*nom</string>
-    <string name="firstname">*prenom</string>
-    <string name="name">name</string>
-    <string name="title_home">Home</string>
-    <string name="title_declaration">Déclarer</string>
-    <string name="title_graphe">Graphe</string>
-    <string name="title_location">Map</string>
-    <string name="check_declaration"></string>
-    <string name="filtre">Filtre:</string>
-    <string name="tri_par">Tri par:</string>
-    <string name="title">Title</string>
-    <string name="dateY">Date</string>
-    <string name="arthor">Arthor</string>
-    <string name="descriptions">Description</string>
-    <string name="Date">date</string>
-    <string name="categorie">category</string>
-    <string name="state">state</string>
+    <string name="t_l_phone">téléphone</string>
     <string name="description">description</string>
-    <string name="button">Valider</string>
-    <string name="graphe">Graphe</string>
+    <string name="partagez_votre_localisation">partagez_votre_localisation</string>
+    <string name="button">valider</string>
 </resources>
