--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,10 @@
     <string name="date_text">Date : </string>
     <string name="number_text">Téléphone : </string>
     <string name="tat">État</string>
+    <string name="graphe_d_etat">Graphe d\'etat</string>
+    <string name="graphe_d_urgence">Graphe d\'urgence</string>
+    <string name="graphe_de_category">Graphe de category</string>
+    <string name="event_activity">Détails d\'un évenement</string>
+    <string name="declar_activity">Déclaration d\'un évenement</string>
+    <string name="change_activity">Modification d\'un évenement</string>
 </resources>
