--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="titre">*titre</string>
     <string name="t_l_phone">téléphone</string>
     <string name="description">description</string>
-    <string name="partagez_votre_localisation">partagez votre localisation</string>
+    <string name="partagez_votre_localisation">Partagez votre localisation</string>
     <string name="button">valider</string>
     <string name="urgence">urgence</string>
     <string name="state">state</string>
