add new fonction, swipe to delete an event. add toolbar for each layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,8 @@
     <string name="change_activity">Modification d\'un évènement</string>
     <string name="category">*Category :</string>
     <string name="hh">*Urgence :</string>
+    <string name="empty"> </string>
+    <string name="details">Détails d\'évènement</string>
+    <string name="modifie">Modifier un évènement</string>
 
 </resources>
