shit need to discard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,7 @@
     <string name="empty"> </string>
     <string name="details">Détails d\'évènement</string>
     <string name="modifie">Modifier un évènement</string>
+    <string name="destinataire">Destinataire :</string>
+    <string name="destinataire_telephone">Téléphone du destinataire</string>
 
 </resources>
