--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,28 @@
 <resources>
     <string name="app_name">PolyCare</string>
-    <string name="add">add</string>
-    <string name="graphe">graphe</string>
-    <string name="homepage">homepage</string>
+    <string name="add">Ajouter</string>
+    <string name="graphe">Graphique</string>
+    <string name="homepage">Page d\'accueil</string>
     <string name="tri_par">Tri par</string>
     <string name="filtre">Filtre</string>
-    <string name="title">title</string>
+    <string name="title">Titre</string>
     <string name="datey">dateY</string>
-    <string name="arthor">arthor</string>
-    <string name="descriptions">descriptions</string>
-    <string name="acueil">Acueil</string>
+    <string name="arthor">Auteur</string>
+    <string name="descriptions">Descriptions</string>
+    <string name="acueil">Accueil</string>
     <string name="declar">Déclarer</string>
     <string name="graph">Graphe</string>
     <string name="map">Map</string>
     <string name="nom">*Nom : </string>
-    <string name="pernom">*Pernom : </string>
+    <string name="pernom">*Prénom : </string>
     <string name="titre">*Titre : </string>
-    <string name="t_l_phone">Mon téléphone : </string>
+    <string name="t_l_phone">Mon numéro (sera visible) : </string>
     <string name="description">Description : </string>
     <string name="partagez_votre_localisation">Partagez votre localisation</string>
-    <string name="button">valider</string>
-    <string name="urgence">urgence</string>
-    <string name="state">state</string>
-    <string name="arthor_text">Arthor : </string>
+    <string name="button">Valider</string>
+    <string name="urgence">Urgence</string>
+    <string name="state">État</string>
+    <string name="arthor_text">Auteur : </string>
     <string name="title_text">Titre : </string>
     <string name="description_text">Description : </string>
     <string name="urgence_text">Urgence : </string>
@@ -30,16 +30,16 @@
     <string name="date_text">Date : </string>
     <string name="number_text">Téléphone : </string>
     <string name="tat">État</string>
-    <string name="graphe_d_etat">Graphe d\'etat</string>
-    <string name="graphe_d_urgence">Graphe d\'urgence</string>
-    <string name="graphe_de_category">Graphe de catégorie</string>
+    <string name="graphe_d_etat">Graphe d\'état</string>
+    <string name="graphe_d_urgence">Graphe d\'Urgences</string>
+    <string name="graphe_de_category">Graphe de catégories</string>
     <string name="event_activity">Détails d\'un évènement</string>
     <string name="declar_activity">Déclaration d\'un évènement</string>
     <string name="change_activity">Modification d\'un évènement</string>
-    <string name="category">*Category :</string>
+    <string name="category">*Catégorie :</string>
     <string name="hh">*Urgence :</string>
     <string name="empty"> </string>
-    <string name="details">Détails d\'évènement</string>
+    <string name="details">Détails d\'évènements</string>
     <string name="modifie">Modifier un évènement</string>
     <string name="destinataire">Destinataire :</string>
     <string name="destinataire_telephone">Téléphone du destinataire</string>
